--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Memory Game!</title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Memory Game!</h1>
+    <h1>MEMORY GAME</h1>
+    <div id="timer"></div>
     <div id="game">
     </div>
-    <button id="restart">RESTART</button>
+    <button id="start">START</button>
+    <button id="end" class="hidden">END</button>
     <script src="script.js"></script>
   </body>
 </html>
